deployment-for-ci.yml
# Service
---
apiVersion: v1
kind: Service
metadata:
 name: {FullName}
spec:
 selector:
   app: java-app
   version: {Version}
   environment: {Environment}
 # type: LoadBalancer
 type: NodePort
 ports:
  # the port that this service should serve on
  - protocol: TCP
    port: 80
    targetPort: 80
    # nodePort: 30000-32767

# Deployment
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: {FullName}
spec:
  replicas: {Replicas}
  template:
    metadata:
      labels:
        app: java-app
        version: {Version}
        environment: {Environment}
    spec:
      containers:
      - name: java-app
        image: kota661/hello-java:{Version}
        # Always, Never, default:IfNotPresent
        imagePullPolicy: {ImagePullPolicy}
        ports:
        - containerPort: 80
        #readinessProbe:
        #  httpGet:
        #    path: /health
        #    port: 8080
        #  initialDelaySeconds: 20
        #resources:
        #  requests:
        #    cpu: 100m
        #    memory: 100Mi
