deployment.yml
# Service
---
apiVersion: v1
kind: Service
metadata:
  name: java-svc
spec:
  selector:
    app: java-app
  ports:
   - protocol: TCP
     port: 80
     targetPort: 80

# Service-NodePort/LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
 name: java-np-svc
spec:
 selector:
   app: java-app
 # type: LoadBalancer
 type: NodePort
 ports:
  # the port that this service should serve on
  - protocol: TCP
    port: 80
    targetPort: 80
    # nodePort: 30000-32767
    nodePort: 31903

# Deployment
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: java-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
      - name: java-app
        image: kota661/hello-java:latest
        ports:
        - containerPort: 80
        #readinessProbe:
        #  httpGet:
        #    path: /health
        #    port: 8080
        #  initialDelaySeconds: 20
        #resources:
        #  requests:
        #    cpu: 100m
        #    memory: 100Mi
